--- a/goit-js-hw-03/index.html
+++ b/goit-js-hw-03/index.html
@@ -7,13 +7,12 @@
     <title>JS-HM-3</title>
 </head>
 <body>
-    <!-- <script type="module" src="task-01.js"></script> -->
-    <!-- <script type="module" src="task-02.js"></script> -->
-    <!-- <script type="module" src="task-03.js"></script> -->
-    <!-- <script type="module" src="task-04.js"></script> -->
-    <!-- <script type="module" src="task-05.js"></script> -->
-    <!-- <script type="module" src="task-06.js"></script> -->
-    <!-- <script type="module" src="task-07.js"></script> -->
-    <script type="module" src="1.js"></script>
+    <script type="module" src="task-01.js"></script>
+    <script type="module" src="task-02.js"></script>
+    <script type="module" src="task-03.js"></script>
+    <script type="module" src="task-04.js"></script>
+    <script type="module" src="task-05.js"></script>
+    <script type="module" src="task-06.js"></script>
+    <script type="module" src="task-07.js"></script>
 </body>
 </html>
