--- a/mods/mod-05_Constructors_Prototypes_Classes/repeta/index.html
+++ b/mods/mod-05_Constructors_Prototypes_Classes/repeta/index.html
@@ -24,5 +24,6 @@
     </div>
     <!-- <script src="/mods/mod-05/repeta/index.js"></script> -->
     <script src="/mods/mod-05/repeta/counter.js"></script>
+    <!-- <script src="/mods/mod-05/repeta/web-repeta-05-2.js"></script> -->
   </body>
 </html>
