--- a/goit-js-hw-11-color-switch/index.html
+++ b/goit-js-hw-11-color-switch/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>JS-HW-11-Color-Switcher</title>
+    <title>JS-HW-11-color-switcher</title>
   </head>
   <body>
     <button type="button" data-action="start">Start</button>
     <button type="button" data-action="stop">Stop</button>
-    <!-- -------- -->
-    <script src="./index.js" type="module"></script>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
